colcon_ws/log/build_2022-09-13_04-41-57/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target gatekeeper[0m
[ 40%] Built target nominal_controller
[ 60%] [32mBuilding CXX object CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o[0m
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::publish_free_pcl()’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:262:21: error: expected unqualified-id before ‘!’ token
  262 |     if (m_octree->  !isNodeOccupied(*it)){
      |                     ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:262:19: error: expected ‘)’ before ‘!’ token
  262 |     if (m_octree->  !isNodeOccupied(*it)){
      |        ~          ^ ~
      |                   )
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
